--- a/missmister.html
+++ b/missmister.html
@@ -16,7 +16,7 @@
     <nav class="navbar fixed-top navbar-expand-lg" style="--bs-bg-opacity: .99;">
         <div class="container-fluid">
             <a class="navbar-brand" href="./index.html">
-                <img src="./images/logo-aejd.svg" alt="" height="30">
+                <img src="./images/ae.JPG" alt="" height="30" id="navbar-icon">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
